translateZ调用GPU图形处理功能，去除手机端默认背景颜色

--- a/style/index.css
+++ b/style/index.css
@@ -34,6 +34,9 @@ img {
   display: -webkit-flex;
   display: flex;
 }
+body{
+  -webkit-tap-highlight-color: transparent;
+}
 /*--公共 结束--*/
 #main {
   max-width: 540px;
